@@ -1,3 +1,9 @@
+2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (make_date): Support LOCALDATE.
+
+	* Defaults.py (LOCALDATE): New variable.
+
 2002-04-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Util.py (make_date): Include our own code until such time as
